<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout 
        android:id="@+id/hot_search"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#20ffffff">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/video_gionee_hot_video"/>
        <ImageView 
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="14dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/video_cardview_refresh"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hot_search"
        android:background="#1effffff" >

        <RelativeLayout
            android:id="@+id/cardview_search_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="9dp"
            android:background="#20ffffff" >

            <ImageView
                android:id="@+id/search_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/video_cardview_search" />

            <EditText
                android:id="@+id/search_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/search_pic"
                android:background="@null"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@+id/cardview_search_view"
            android:layout_marginTop="9dp"
            android:background="#0cffffff" />

        <GridView 
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:layout_below="@+id/line"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="14dp"
            android:horizontalSpacing="10dp"
            android:numColumns="3"
            android:scrollbars="none"
            android:columnWidth="104dp">
            
        </GridView>
        <TextView
            android:id="@+id/line_01"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_below="@+id/gridView"
            android:layout_marginTop="14dp"
            android:background="#0cffffff" />

        <LinearLayout
            android:id="@+id/cardview_mine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_01"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginTop="18dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/cardview_mine_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/video_cardview_download" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:text="@string/video_gionee_mine_download"
                    android:textColor="#ddffffff"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardview_mine_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/video_cardview_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:text="@string/video_gionee_look_video"
                    android:textColor="#ddffffff"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardview_mine_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/video_ranking" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:text="@string/video_gionee_ranking"
                    android:textColor="#ddffffff"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/background"
        android:layout_centerVertical="true"
        android:background="#20ffffff" >

        <TextView
            android:id="@+id/home"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="14dp"
            android:text="@string/video_gionee_more" />
    </RelativeLayout>
</RelativeLayout>